delay and batch calls to StartListeningFormulaCells() (tdf#133302)

In the testcase ScColumn::StartListeningUnshared() gets called
repeatedly with almost the same cells range (just extending),
so this gets quadratic. Delaying and doing it once on the whole
range at the end avoids this.

Change-Id: I3e92817d434cf7e4be0ea658f9adc0a24ceda260